--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -33,9 +33,10 @@ default.home.label=Home
 default.list.label={0} List
 default.add.label=Add {0}
 default.new.label=New {0}
-default.create.label=Create {0}
+default.save.label=Save {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
+default.main.title=Video push demo frontend 
 
 default.button.create.label=Create
 default.button.edit.label=Edit
@@ -53,3 +54,24 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+device.deviceId.label=Device ID
+device.name.label=Name
+device.form.label=Device
+
+video.url.label=Url
+video.preview.label=Preview
+video.form.label=Video
+
+announcement.form.label=Announcement
+announcement.notificationMessage.label=Notification message
+announcement.actionUrl.label=Action url
+announcement.action.label=Click me!
+announcement.exit.label=Exit
+
+push.form.label=Application
+push.settings.title=Push settings
+push.appId.label=Application ID
+push.apiKey.label=API Key
+
+videoPush.button.send.label=Send video announcement
